--- a/index.css
+++ b/index.css
@@ -1,7 +1,76 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,500;0,9..40,700;1,9..40,400&family=Dancing+Script:wght@400;500;600;700&family=Fira+Sans&family=Nunito:wght@400;500;600;700&family=Oswald:wght@400;500;600;700&family=Playfair+Display&family=Poppins:wght@400;500;600;700&family=Titan+One&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap");
+
 * {
   margin: 0;
   padding: 0;
 }
+.container {
+  display: flex;
+}
 .sidebar {
-  background-color: red;
+  background-color: rgb(158, 154, 154);
+  width: 13vw;
+  height: 100vh;
+  font-family: "Fira Sans", sans-serif;
+}
+.sidebar nav {
+  padding: 45px;
+}
+.sidebar nav li {
+  list-style: none;
+  font-size: 25px;
+  padding: 33px 0;
+  font-weight: 600;
+}
+
+.main {
+  /* background-color: yellow; */
+  width: 87vw;
+}
+.infoContainer {
+  /* background-color: rgb(73, 172, 86); */
+  height: 58vh;
+  width: 80vw;
+  margin: 144px auto;
+  display: flex;
+  justify-content: space-around;
+}
+.devInfo {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  font-family: "Source Code Pro", monospace;
+}
+.hello {
+  font-size: 55px;
+}
+.name {
+  font-size: 50px;
+  font-weight: bold;
+  font-family: "Fira Sans", sans-serif;
+}
+.about {
+  font-size: 40px;
+}
+.moreabout {
+  font-size: 22px;
+  font-family: "Fira Sans", sans-serif;
+}
+.buttons {
+  margin-top: 34px;
+}
+.buttons button {
+  padding: 9px 14px;
+  border-radius: 22px;
+  color: white;
+  background-color: dodgerblue;
+  font-weight: bold;
+  font-size: 18px;
+  margin: 0 3px;
+}
+.devPic img {
+  width: 381px;
+  height: 58vh;
 }
