--- a/blog.css
+++ b/blog.css
@@ -34,40 +34,19 @@
   /* background-color: yellow; */
   width: 90vw;
 }
-.infoContainer {
-  /* background-color: rgb(73, 172, 86); */
-  height: 58vh;
-  width: 80vw;
-  margin: 144px auto;
-  display: flex;
-  justify-content: space-around;
+.blogItem {
+  margin: 20px;
+  font-family: "Fira Sans", sans-serif;
 }
-.devInfo {
-  font-size: 16px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+.blogContainer {
+  margin: 90px;
+}
+.blogContainer h1 {
+  margin: 22px;
+  font-family: "Fira Sans", sans-serif;
+}
+.blogItem p {
   font-family: "Source Code Pro", monospace;
-}
-.hello {
-  font-size: 3em;
-}
-.name {
-  font-size: 3em;
-  font-weight: bold;
-  font-family: "Fira Sans", sans-serif;
-}
-.about {
-  font-size: 2.5em;
-}
-.moreabout {
-  font-size: 2em;
-  margin-top: 23px;
-  font-family: "Fira Sans", sans-serif;
-}
-.buttons {
-  margin-top: 2.2em;
-  font-size: 16px;
 }
 .btn {
   padding: 9px 14px;
@@ -75,17 +54,18 @@
   color: white;
   background-color: dodgerblue;
   font-weight: bold;
-  font-size: 2em;
-  margin: 3px 3px;
+  font-size: 18px;
+  margin: 0 3px;
   cursor: pointer;
+}
+.btn-sm {
+  font-size: 10px;
+  padding: 7px 13px;
+  margin: 10px 0;
 }
 .btn:hover {
   color: dodgerblue;
   background-color: white;
-}
-.devPic img {
-  width: 381px;
-  height: 58vh;
 }
 .sidebarGo {
   transform: translate(-443px, 0px);
@@ -106,13 +86,7 @@
   margin-top: 8px;
 }
 @media (max-width: 1440px) {
-  .buttons {
-    font-size: 6px;
-  }
-  .devInfo {
-    font-size: 10px;
-  }
-  .devPic {
-    display: none;
-  }
+ .blogContainer{
+  margin: 50px 8px;
+ }
 }
