--- a/contact.css
+++ b/contact.css
@@ -10,10 +10,11 @@
   display: flex;
 }
 .sidebar {
+  position: absolute;
   background-color: rgb(183, 179, 179);
-  width: 434px;
   height: 100vh;
   font-family: "Fira Sans", sans-serif;
+  transition: transform 0.3s ease-in;
 }
 .sidebar nav {
   padding: 45px;
@@ -35,13 +36,13 @@
 }
 .contactForm {
   padding: 0 34px;
-  padding-top: 144px;
   font-family: "Fira Sans", sans-serif;
+  margin: 90px;
 }
 
 .contactForm h1 {
   font-family: "Source Code Pro", monospace;
-  padding: 12px 0;
+  /* padding: 12px 0; */
 }
 .contactForm form div {
   padding: 10px 0;
@@ -49,10 +50,13 @@
   flex-direction: column;
 }
 .contactForm form div input {
-  width: 26vw;
+  /* width: 26vw; */
   border-radius: 5px;
   margin: 6px 0 0 0;
   padding: 3px;
+}
+.contactForm form {
+  margin: 0 40px;
 }
 #emailHelp {
   font-size: 11px;
@@ -77,7 +81,35 @@
   margin: 0 3px;
   cursor: pointer;
 }
+.btn-sm {
+  font-size: 14px;
+  padding: 10px 19px;
+  margin: 12px 0;
+}
 .btn:hover {
   color: dodgerblue;
   background-color: white;
+}
+.sidebarGo {
+  transform: translate(-443px, 0px);
+  position: absolute;
+}
+.hamburger {
+  position: absolute;
+  cursor: pointer;
+  top: 10px;
+  left: 10px;
+}
+.ham {
+  margin-top: 8px;
+  margin-left: 10px;
+}
+.cross {
+  margin-left: 175px;
+  margin-top: 8px;
+}
+@media (max-width: 1440px) {
+  .contactForm {
+    margin: 50px 8px;
+  }
 }
