--- a/intro.css
+++ b/intro.css
@@ -34,58 +34,43 @@
   /* background-color: yellow; */
   width: 90vw;
 }
-.infoContainer {
-  /* background-color: rgb(73, 172, 86); */
-  height: 58vh;
-  width: 80vw;
-  margin: 144px auto;
-  display: flex;
-  justify-content: space-around;
+.intro h2 {
+  font-family: "Fira Sans", sans-serif;
+  margin: 12px;
 }
-.devInfo {
-  font-size: 16px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+.intro {
+  margin: 90px;
+}
+.intro p {
   font-family: "Source Code Pro", monospace;
+  margin: 12px;
 }
-.hello {
-  font-size: 3em;
+.skillContainer {
+  padding: 12px;
 }
-.name {
-  font-size: 3em;
-  font-weight: bold;
-  font-family: "Fira Sans", sans-serif;
+.skill {
+  width: 265px;
+  height: 6px;
+  background-color: red;
+  border: 2px solid black;
 }
-.about {
-  font-size: 2.5em;
+.skillItem {
+  display: flex;
+  align-items: center;
+  font-family: "Source Code Pro", monospace;
+  font-weight: 900;
 }
-.moreabout {
-  font-size: 2em;
-  margin-top: 23px;
-  font-family: "Fira Sans", sans-serif;
+.hundred {
+  width: 265px;
+  background-color: blueviolet;
 }
-.buttons {
-  margin-top: 2.2em;
-  font-size: 16px;
+.fifty {
+  width: 125px;
+  background-color: aqua;
 }
-.btn {
-  padding: 9px 14px;
-  border-radius: 22px;
-  color: white;
-  background-color: dodgerblue;
-  font-weight: bold;
-  font-size: 2em;
-  margin: 3px 3px;
-  cursor: pointer;
-}
-.btn:hover {
-  color: dodgerblue;
-  background-color: white;
-}
-.devPic img {
-  width: 381px;
-  height: 58vh;
+.t5 {
+  width: 75px;
+  background-color: yellow;
 }
 .sidebarGo {
   transform: translate(-443px, 0px);
@@ -106,13 +91,7 @@
   margin-top: 8px;
 }
 @media (max-width: 1440px) {
-  .buttons {
-    font-size: 6px;
-  }
-  .devInfo {
-    font-size: 10px;
-  }
-  .devPic {
-    display: none;
+  .intro {
+    margin: 50px 8px;
   }
 }
